--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,5 @@
 *.csv
 .vscode/*
 __pycache__/helper_functions_preprocessing.cpython-38.pyc
+__pycache__/helper_functions_preprocessing.cpython-38.pyc
+__pycache__/helper_functions_preprocessing.cpython-38.pyc
