Switch to home PC

--- a/.gitignore
+++ b/.gitignore
@@ -2,3 +2,4 @@
 .vscode/*
 __pycache__/helper_functions_preprocessing.cpython-38.pyc
 wandb/*
+__pycache__/helper_functions_preprocessing.cpython-38.pyc
